<resources>
    <string name="app_name">BidMe</string>

    <!-- Login Fragment -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="error_invalid_pincode">Wrong pincode!</string>

    <!-- Navigation View -->
    <string name="navigationBidItem">Auction Room</string>
    <string name="navigationAddItem">Add an item</string>
    <string name="navigationShowItem">Show items</string>
    <string name="navigationLogout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>



    <!-- Main menu Fragment -->
    <string name="mainMenuFragmentHeader">Menu</string>
    <string name="mainMenuFragmentAddItem">Add item</string>
    <string name="mainMenuFragmentBidItem">Bid</string>
    <string name="mainMenuFragmentShowItems">Show Items</string>

    <!-- Add ItemFragment -->
    <string name="itemFragmentHeader">Add item</string>
    <string name="itemFragmentTitle">Title</string>
    <string name="itemFragmentName">Name</string>
    <string name="itemFragmentDesc">Description</string>
    <string name="itemFragmentPrice">Price</string>
    <string name="itemFragmentAuthor">Author</string>
    <string name="itemFragmentAddItemBtn">Add Item</string>
    <string name="itemFragmenCancelItemBtn">Cancel</string>
    <string name="itemFragmentTakePhotoBtn">Take Photo</string>
    <string name="itemFragmentShowPhotoBtn">Show Photo</string>

    <!-- Menu Actions ItemFragment -->
    <string name="add_items_settings">Settings</string>
    <string name="add_items_camera">Camera</string>
    <string name="add_items_show_image">Show Image</string>

    <!-- String Array for the choiceDialog in AddItemFragment -->
    <string-array name="add_item_choice_array">
        <item>Add a new item</item>
        <item>View added items</item>
        <item>Go back to main menu</item>
    </string-array>

    <!-- String for spinner int ItemFragment -->
    <string-array name="items_array">
        <item>Select an item...</item>
        <item>Book</item>
        <item>Movies</item>
        <item>Bicycles</item>
        <item>Phones</item>
    </string-array>

    <!-- Bid ItemFragment -->
    <string name="bidFragmentPicture">Picture</string>
    <string name="bidFragmentTitleHeader">Title</string>
    <string name="bidFragmentTitle">Item name</string>
    <string name="bidFragmentPrice">Price</string>
    <string name="bidFragmentYourBid">Bid</string>
    <string name="bidFragmentAddBidButton">+ 5KR</string>
    <string name="bidFragmentRemoveBidButton">- 5KR</string>
    <string name="bidFragmentConfirmBidButton">Bid</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
