<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    tool:context="mah.bidme.ItemFragment">

    <item
        android:id="@+id/action_settings"
        android:title="@string/add_items_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/take_image"
        android:orderInCategory="1"
        android:icon="@drawable/photo_camera_white"
        app:showAsAction="ifRoom"
        android:title="@string/add_items_camera" />

    <item android:id="@+id/show_image"
        android:orderInCategory="2"
        android:icon="@drawable/show_photo_white"
        app:showAsAction="ifRoom"
        android:title="@string/add_items_show_image" />
</menu>