<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="mah.bidme.MainMenuFragment" android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuTitle"
        android:textSize="50sp"
        android:text="@string/mainMenuFragmentHeader"
        android:gravity="center"
        android:layout_alignBaseline="@+id/menuButtonBidItem"
        android:layout_alignBottom="@+id/menuButtonBidItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menuButtonAddItem"
        android:text="@string/mainMenuFragmentAddItem"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menuButtonBidItem"
        android:text="@string/mainMenuFragmentBidItem"
        android:layout_below="@id/menuButtonAddItem"
        android:layout_centerHorizontal="true"/>





</RelativeLayout>
