<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mah.bidme.ItemFragment">

    <mah.bidme.CustomView.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/titleOfView"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/titleOfView"
        android:paddingBottom="8dp" >

        <mah.bidme.CustomView.CustomEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/itemFragmentTitle"
            android:singleLine="true"
            android:textSize="16sp"
            android:layout_below="@+id/titleOfView" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/input_layout_title"
        android:paddingBottom="8dp">

        <mah.bidme.CustomView.CustomEditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/itemFragmentDesc"
            android:textSize="16sp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_price"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/input_layout_desc"
        android:paddingBottom="8dp">

        <mah.bidme.CustomView.CustomEditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/itemFragmentPrice"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_below="@+id/input_layout_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@+id/input_spinner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <Button
                android:id="@+id/takePhotoBtn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/itemFragmentTakePhotoBtn"/>

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/showTakenPhotoBtn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/itemFragmentShowPhotoBtn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:text="@string/itemFragmenCancelItemBtn"/>

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:text="@string/itemFragmentAddItemBtn"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
