<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_item"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="0dp"
        card_view:cardElevation="20dp"
        card_view:cardMaxElevation="50dp"
        card_view:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <!-- ImageView - Picture-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:id="@+id/item_picture"
                android:text="@string/bidFragmentPicture"
                />

            <!-- Textview - Item name-->
            <mah.bidme.CustomView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/item_name"
                android:text="@string/bidFragmentTitle"
                android:textSize="30sp"
                android:layout_below="@+id/item_picture"/>

           <!-- &lt;!&ndash; Textview - Current price&ndash;&gt;
            <mah.bidme.CustomView.CustomTextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bidFragmentPrice"
                android:textSize="30sp"
                android:id="@+id/item_price_title"
                android:layout_alignRight="@+id/item_name"/>
-->
            <!-- TextBox - Current Price-->
            <mah.bidme.CustomView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bidFragmentPrice"
                android:textSize="30sp"
                android:id="@+id/item_price_text"
                android:layout_alignBaseline="@+id/item_name"
                android:layout_alignParentRight="true"/>

            <!-- TextView - Your Price-->
            <mah.bidme.CustomView.CustomTextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bidFragmentYourBid"
                android:textSize="30sp"
                android:id="@+id/item_bid_title"
                android:layout_below="@+id/item_name"/>

            <!-- TextBox - Your Price-->
            <mah.bidme.CustomView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:id="@+id/item_bid_text"
                android:layout_alignBaseline="@+id/item_name"
                android:layout_alignRight="@+id/item_bid_title"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>